Fix: usedby selects from SEARCH_WORKFLOWS